adding user type association methods and swagger informations
